add auth endpoinds and infrastructure for them
