# internal/domain/userDTO.go
@@ -1,0 +1,6 @@
+package domain
+
+type UserDTO struct {
+	Username string `json:"username" validate:"required"`
+	Password string	`json:"password" validate:"required"`
+}
